unpackaged/main/default/objects/FSL__Crew_Management_User_Settings__c/fields/FSL__GanttHorizon__c.field-meta.xml
<CustomField>
    <fullName>FSL__GanttHorizon__c</fullName>
    <label>Days on gantt</label>
    <length>3</length>
    <type>Text</type>
</CustomField>