unpackaged/main/default/objects/FSL__Crew_Management_User_Settings__c/fields/FSL__SchedulingPolicy__c.field-meta.xml
<CustomField>
    <fullName>FSL__SchedulingPolicy__c</fullName>
    <label>Scheduling Policy</label>
    <length>20</length>
    <type>Text</type>
</CustomField>