unpackaged/main/default/objects/FSL__Crew_Management_User_Settings__c/fields/FSL__SelectedSkills__c.field-meta.xml
<CustomField>
    <fullName>FSL__SelectedSkills__c</fullName>
    <label>Selected Skills</label>
    <length>130000</length>
    <type>LongTextArea</type>
</CustomField>